--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
 
     <script>
-      var firebaseConfig = {
-        apiKey: "AIzaSyCQSvZTLJeMBVG4y5pNb9DiyQ_1a5ccc8k",
-        authDomain: "car-multiplayr.firebaseapp.com",
-        databaseURL: "https://car-multiplayr-default-rtdb.firebaseio.com",
-        projectId: "car-multiplayr",
-        storageBucket: "car-multiplayr.appspot.com",
-        messagingSenderId: "726926836476",
-        appId: "1:726926836476:web:3e3f126820017757b9cd79",
-        measurementId: "G-7CFYSS56JN"
-    };
+      const firebaseConfig = {
+        apiKey: "AIzaSyC46uZ1rN7y7QuwMUf9Li4fHy85IRToNoo",
+        authDomain: "corridadecarros-84169.firebaseapp.com",
+        databaseURL: "https://corridadecarros-84169-default-rtdb.firebaseio.com",
+        projectId: "corridadecarros-84169",
+        storageBucket: "corridadecarros-84169.appspot.com",
+        messagingSenderId: "365846442860",
+        appId: "1:365846442860:web:3af4950d1d4a995178b949"
+      };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
